--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}" />
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/Logo.jfif') }}" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/theme.css') }}"
+    />
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='img/Logo.jpg') }}"
+      type="image/x-icon"
+    />
 
     <title>Bahay Aruga</title>
   </head>
@@ -25,7 +32,11 @@
             <li>
               <a href="">
                 <div class="logo-nav">
-                  <img src="{{ url_for('static', filename='img/Logo.jfif') }}" class="logo" alt="Logo" />
+                  <img
+                    src="{{ url_for('static', filename='img/Logo.jpg') }}"
+                    class="logo"
+                    alt="Logo"
+                  />
                   <span>Bahay Aruga</span>
                 </div>
               </a>
@@ -52,20 +63,124 @@
           <form action="/register-user" method="post">
             <div class="field-con">
               <label for="name">NAME</label>
-              <input type="text" name="name" />
+              <input type="text" name="name" required />
             </div>
             <div class="field-con">
               <label for="name">EMAIL</label>
-              <input type="email" name="email" />
+              <input type="email" name="email" required />
+            </div>
+            <div class="field-con">
+              <label for="province">EMAIL</label>
+              <select name="province">
+                <option value="" selected hidden disabled>
+                  Select Province
+                </option>
+                <option value="Abra">Abra</option>
+                <option value="Agusan del Norte">Agusan del Norte</option>
+                <option value="Agusan del Sur">Agusan del Sur</option>
+                <option value="Aklan">Aklan</option>
+                <option value="Albay">Albay</option>
+                <option value="Antique">Antique</option>
+                <option value="Apayao">Apayao</option>
+                <option value="Aurora">Aurora</option>
+                <option value="Basilan">Basilan</option>
+                <option value="Bataan">Bataan</option>
+                <option value="Batanes">Batanes</option>
+                <option value="Batangas">Batangas</option>
+                <option value="Benguet">Benguet</option>
+                <option value="Biliran">Biliran</option>
+                <option value="Bohol">Bohol</option>
+                <option value="Bukidnon">Bukidnon</option>
+                <option value="Bulacan">Bulacan</option>
+                <option value="Cagayan">Cagayan</option>
+                <option value="Camarines Norte">Camarines Norte</option>
+                <option value="Camarines Sur">Camarines Sur</option>
+                <option value="Camiguin">Camiguin</option>
+                <option value="Capiz">Capiz</option>
+                <option value="Catanduanes">Catanduanes</option>
+                <option value="Cavite">Cavite</option>
+                <option value="Cebu">Cebu</option>
+                <option value="Cotabato">Cotabato</option>
+                <option value="Davao de Oro">Davao de Oro</option>
+                <option value="Davao del Norte">Davao del Norte</option>
+                <option value="Davao del Sur">Davao del Sur</option>
+                <option value="Davao Occidental">Davao Occidental</option>
+                <option value="Davao Oriental">Davao Oriental</option>
+                <option value="Dinagat Islands">Dinagat Islands</option>
+                <option value="Eastern Samar">Eastern Samar</option>
+                <option value="Guimaras">Guimaras</option>
+                <option value="Ifugao">Ifugao</option>
+                <option value="Ilocos Norte">Ilocos Norte</option>
+                <option value="Ilocos Sur">Ilocos Sur</option>
+                <option value="Iloilo">Iloilo</option>
+                <option value="Isabela">Isabela</option>
+                <option value="Kalinga">Kalinga</option>
+                <option value="La Union">La Union</option>
+                <option value="Laguna">Laguna</option>
+                <option value="Lanao del Norte">Lanao del Norte</option>
+                <option value="Lanao del Sur">Lanao del Sur</option>
+                <option value="Leyte">Leyte</option>
+                <option value="Maguindanao del Norte">
+                  Maguindanao del Norte
+                </option>
+                <option value="Maguindanao del Sur">Maguindanao del Sur</option>
+                <option value="Marinduque">Marinduque</option>
+                <option value="Masbate">Masbate</option>
+                <option value="Misamis Occidental">Misamis Occidental</option>
+                <option value="Misamis Oriental">Misamis Oriental</option>
+                <option value="Mountain Province">Mountain Province</option>
+                <option value="Negros Occidental">Negros Occidental</option>
+                <option value="Negros Oriental">Negros Oriental</option>
+                <option value="Northern Samar">Northern Samar</option>
+                <option value="Nueva Ecija">Nueva Ecija</option>
+                <option value="Nueva Vizcaya">Nueva Vizcaya</option>
+                <option value="Occidental Mindoro">Occidental Mindoro</option>
+                <option value="Oriental Mindoro">Oriental Mindoro</option>
+                <option value="Palawan">Palawan</option>
+                <option value="Pampanga">Pampanga</option>
+                <option value="Pangasinan">Pangasinan</option>
+                <option value="Quezon">Quezon</option>
+                <option value="Quirino">Quirino</option>
+                <option value="Rizal">Rizal</option>
+                <option value="Romblon">Romblon</option>
+                <option value="Samar">Samar</option>
+                <option value="Sarangani">Sarangani</option>
+                <option value="Siquijor">Siquijor</option>
+                <option value="Sorsogon">Sorsogon</option>
+                <option value="South Cotabato">South Cotabato</option>
+                <option value="Southern Leyte">Southern Leyte</option>
+                <option value="Sultan Kudarat">Sultan Kudarat</option>
+                <option value="Sulu">Sulu</option>
+                <option value="Surigao del Norte">Surigao del Norte</option>
+                <option value="Surigao del Sur">Surigao del Sur</option>
+                <option value="Tarlac">Tarlac</option>
+                <option value="Tawi-Tawi">Tawi-Tawi</option>
+                <option value="Zambales">Zambales</option>
+                <option value="Zamboanga del Norte">Zamboanga del Norte</option>
+                <option value="Zamboanga del Sur">Zamboanga del Sur</option>
+              </select>
+            </div>
+            <div class="field-con">
+              <label for="municipality">Municipality</label>
+              <input type="text" name="municipality" required />
+            </div>
+            <div class="field-con">
+              <label for="name">EMAIL</label>
+              <input type="email" name="email" required />
             </div>
             <div class="field-con">
               <label for="name">PASSWORD</label>
-              <input type="password" id="password" name="password" />
+              <input type="password" id="password" name="password" required />
               <i class="bi bi-eye-slash-fill" id="toggle-password"></i>
             </div>
             <div class="field-con">
               <label for="confirm_password">CONFIRM PASSWORD</label>
-              <input type="password" id="authCPassword" name="password_2" />
+              <input
+                type="password"
+                id="authCPassword"
+                name="password_2"
+                required
+              />
               <i class="bi bi-eye-slash-fill" id="toggle-Cpassword"></i>
             </div>
             <div class="btn-con">
