--- a/templates/login.html
+++ b/templates/login.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../static/css/theme.css" />
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/Logo.jfif') }}" type="image/x-icon" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}" />
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='img/Logo.jpg') }}"
+      type="image/x-icon"
+    />
 
     <title>Bahay Aruga</title>
   </head>
@@ -25,7 +29,11 @@
             <li>
               <a href="">
                 <div class="logo-nav">
-                  <img src="{{ url_for('static', filename='img/Logo.jfif') }}" class="logo" alt="Logo" />
+                  <img
+                    src="{{ url_for('static', filename='img/Logo.jpg') }}"
+                    class="logo"
+                    alt="Logo"
+                  />
                   <span>Bahay Aruga</span>
                 </div>
               </a>
@@ -52,11 +60,11 @@
           <form action="/auth-user" method="post">
             <div class="field-con">
               <label for="name">EMAIL</label>
-              <input type="email" name="email" />
+              <input type="email" name="email" required />
             </div>
             <div class="field-con">
               <label for="name">PASSWORD</label>
-              <input type="password" id="password" name="password" />
+              <input type="password" id="password" name="password" required />
               <i class="bi bi-eye-slash-fill" id="toggle-password"></i>
             </div>
             <div class="btn-con">
