--- a/templates/patient/dashboard.html
+++ b/templates/patient/dashboard.html
@@ -9,7 +9,7 @@
     />
     <link
       rel="shortcut icon"
-      href="{{ url_for('static', filename='img/Logo.jfif') }}"
+      href="{{ url_for('static', filename='img/Logo.jpg') }}"
       type="image/x-icon"
     />
 
