--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,15 @@
           </div>
           <form action="/register-user" method="post">
             <div class="field-con">
+              <label for="type">ACCOUNT TYPE</label>
+              <select name="acc_type">
+                <option value="" selected hidden disabled></option>
+                <option value="1">Admin</option>
+                <option value="2">Patient</option>
+              </select>
+              <input type="text" name="type" required />
+            </div>
+            <div class="field-con">
               <label for="name">NAME</label>
               <input type="text" name="name" required />
             </div>
@@ -186,7 +195,7 @@
             <div class="btn-con">
               <button class="btn-primary">SIGN UP</button>
             </div>
-            <a href="">ALREADY REGISTERED ? LOGIN</a>
+            <a href="/login_page">ALREADY REGISTERED ? LOGIN</a>
           </form>
         </div>
       </div>
