--- a/templates/login.html
+++ b/templates/login.html
@@ -70,7 +70,7 @@
             <div class="btn-con">
               <button class="btn-primary">LOGIN</button>
             </div>
-            <a href="">DON'T HAVE ACCOUNT ?</a>
+            <a href="/">DON'T HAVE ACCOUNT ? REGISTER</a>
           </form>
         </div>
       </div>
