--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -54,10 +54,10 @@
               <a href="#contact">Contact Us</a>
             </li>
             <li>
-              <a href="">Wellness Plan</a>
+              <a href="#">Wellness Plan</a>
             </li>
             <li>
-              <a href="">Schedule</a>
+              <a href="{{ url_for('.admin_schedule') }}">Schedule</a>
             </li>
             <li>
               <a href="{{ url_for('.index') }}">Logout</a>
